--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,8 @@
 <% include head.ejs%>
 
+    <script type="text/javascript">
+    var __PRELOADED_STATE__ = <%- JSON.stringify(preloadedState) %>;
+    </script>
     <div id='root'></div>
     <script src="/dist/bundle.js"></script>
 
