--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -12,3 +12,14 @@
 .custom-card p {
   color: #999;
 }
+
+.family-member-image {
+  position: relative;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  margin-right: 20px
+}
